--- a/NewIntentFilter/src/main/res/values/strings.xml
+++ b/NewIntentFilter/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" >NewIntentFilter
+    <string name="app_name" >Explorador Personalizado
     </string>
     <string name="action_settings" >Settings
     </string>
